--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Method::Alias
 
+0.02 Tue Feb 15 2005
+	- Removing braindead Build.PL
+
 0.01  Wed Dec 22 2004
 	- Created the initial implementation
