--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Method::Alias
 
+1.03 Sat 15 Jul 2006
+	- Moving from old CVS to new SVN Open Repository
+	- Cleaning up test scripts
+	- Upgrading to Module::Install 0.63
+
 0.02 Tue Feb 15 2005
 	- Removing braindead Build.PL
 
