--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    Method::Alias - Create method aliases
+    Method::Alias - Create method aliases (and do it safely)
 
 SYNOPSIS
       # My method
@@ -84,17 +84,21 @@ METHODS
 SUPPORT
     Bugs should always be submitted via the CPAN bug tracker
 
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Method%3A%3AAlias>
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Method-Alias>
 
     For other issues, contact the maintainer
 
 AUTHORS
-    Adam Kennedy (Maintainer), <http://ali.as/>, cpan@ali.as
+    Adam Kennedy <cpan@ali.as>
+
+SEE ALSO
+    <http://ali.as/>
 
 COPYRIGHT
-    Copyright (c) 2004 Adam Kennedy. All rights reserved. This program is
-    free software; you can redistribute it and/or modify it under the same
-    terms as Perl itself.
+    Copyright 2004, 2006 Adam Kennedy. All rights reserved.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
     The full text of the license can be found in the LICENSE file included
     with this module.
